Fix overflow issue with response text

--- a/style.css
+++ b/style.css
@@ -51,10 +51,7 @@ article {
     padding: 5px;
     overflow: scroll;
     word-wrap: break-word;
-}
-
-pre{
-    white-space: pre-wrap;
+    max-height: 20em;
 }
 
 /*Style the form elements*/
